Start on dark mode functionality. Tailwind config changes. Dark mode component. Change layout to use dark mode component. Working on converting to client side server and fixing meta data issue.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,14 @@
 .scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
   border-radius: 0.25rem;
 }
+
+/* used for dark mode */
+body {
+  background-color: white;
+  color: black;
+}
+
+body.dark {
+  background-color: black;
+  color: white;
+}
